--- a/spongebob/view/index.html
+++ b/spongebob/view/index.html
@@ -38,12 +38,12 @@
     <div class="main">       
         <center>
             <div id="home1" onmouseover="mover()" onmouseout="mout()" >
-                <a href="./HP00.html">
-                    <img id="home2" src="./imgs/img_spongebab5.jpg" >
+                <a href="./main.html">
+                    <img id="home2" src="../assets/imges/img_spongebab5.jpg" >
                 </a>
                 
             </div>
-            <form action="./HP1.html">
+            <form action="./login.html">
                 <div>
                     <h1>welcome.</h1><br>
                     <h2>Spongebab and friends!!</h2> 
@@ -62,12 +62,12 @@
 <script>
     function mover()
     {   
-        document.getElementById("home2").setAttribute("src" , "./imgs/img_spongebab5 copy.jpg");
+        document.getElementById("home2").setAttribute("src" , "../assets/imges/img_spongebab5 copy.jpg");
     }
 
     function mout()
     {   
-        document.getElementById("home2").setAttribute("src" , "./imgs/img_spongebab5.jpg");
+        document.getElementById("home2").setAttribute("src" , "../assets/imges/img_spongebab5.jpg");
     }
 
     
