--- a/spongebob/view/login.html
+++ b/spongebob/view/login.html
@@ -24,23 +24,23 @@
 <body>
     
     <header>
-        <a href="./HP0.html"><img src="./imgs/icon1w_home.gif"width="50px"></a>
+        <a href="./main.html"><img src="../assets/imges/icon1w_home.gif"width="50px"></a>
     </header>
 
     <!-- <form action="#"> -->
         <div>
             <center>
             <div class="you">
-                <img src="./스폰지밥_도트.gif">
-                <img src="./스폰지밥_뚱이_도트.gif">
+                <img src="../assets/imges/스폰지밥_도트.gif">
+                <img src="../assets/imges/스폰지밥_뚱이_도트.gif">
                 <h1>Find our Squidward.<br>Who are you?</h1>
 
             </div>
 
             <div>
-                <img src="./imgs/img_spongebab3.jpg" width="200px">
+                <img src="../assets/imges/img_spongebab3.jpg" width="200px">
             </div>
-            <form action="login.php" method="post">
+            <form action="../back/login.php" method="post">
                 <div>
                     <label for="username">Username : </label>
                     <input type="id" name="username" alt="username" value="id">
@@ -65,9 +65,9 @@
 
 
        <footer>
-        <img src="./imgs/icon1w_call.gif"width="50px">
+        <img src="../assets/imges/icon1w_call.gif"width="50px">
         
-        <img src="./imgs/icon1w_in.gif"width="50px">
+        <img src="../assets/imges/icon1w_in.gif"width="50px">
        </footer>
 
 
