--- a/spongebob/view/main.html
+++ b/spongebob/view/main.html
@@ -72,7 +72,7 @@
     <div>
         <center>
             <div>
-                <img src="./imgs/img_spongebab7.jpg">
+                <img src="../assets/imges/img_spongebab7.jpg">
             </div>
             <div class="text">
                 <a href="./The Krusty Krab.html" >The Krusty Krab</a>
