--- a/spongebob/view/signup.html
+++ b/spongebob/view/signup.html
@@ -45,7 +45,7 @@
     </div>
     <div class="container_wrap">
         <div class="container">
-            <form action="./signup.php" method="post">
+            <form action="../back/signup.php" method="post">
                 <div class="information">
                     <label for="id">id</label>
                     <input name="id" type="id" id="userid" placeholder="새로운 아이디">
