--- a/stylesheet_index.css
+++ b/stylesheet_index.css
@@ -1,5 +1,17 @@
 @import url('https://fonts.googleapis.com/css?family=Corben:700');
 
+html,
+body{
+    width: 100%;
+	height: 100%;
+	background: rgb(1,0,6);
+    background: linear-gradient(347deg, rgba(1,0,6,1) 0%, rgba(26,9,121,1) 31%, rgba(16,177,132,0.8575805322128851) 100%);
+    
+}
+.center{
+    height: 100%;
+	width: 100%;
+}
 
 h1 {
 	font-family: 'Corben', cursive;
