--- a/stylesheet_index.css
+++ b/stylesheet_index.css
@@ -2,6 +2,8 @@
 
 html,
 body{
+	margin:0;
+	padding:0;
     width: 100%;
 	height: 100%;
 	background: rgb(1,0,6);
@@ -72,4 +74,25 @@ h1 {
 		transform: translateY(0);
 	}
 	
+}
+
+
+
+
+
+/* bottom 부분 */
+
+.bottom{
+	background: rgb(1,0,6);
+    background: linear-gradient(347deg, rgba(1,0,6,1) 0%, rgba(26,9,121,1) 31%, rgba(16,177,132,0.8575805322128851) 100%);
+}
+
+#canvas{
+	margin:0 auto;
+	display:block;
+	filter:url('#shadowed-goo');
+}
+
+svg{
+  display:none;
 }
