--- a/stylesheet_index.css
+++ b/stylesheet_index.css
@@ -5,7 +5,7 @@ body{
 	margin:0;
 	padding:0;
     width: 100%;
-	height: 100%;
+	height: 1000px;
 	background: rgb(1,0,6);
     background: linear-gradient(347deg, rgba(1,0,6,1) 0%, rgba(26,9,121,1) 31%, rgba(16,177,132,0.8575805322128851) 100%);
     
