--- a/stylesheet_index.css
+++ b/stylesheet_index.css
@@ -5,7 +5,7 @@ body{
 	margin:0;
 	padding:0;
     width: 100%;
-	height: 1000px;
+	height: auto;
 	background: rgb(1,0,6);
     background: linear-gradient(347deg, rgba(1,0,6,1) 0%, rgba(26,9,121,1) 31%, rgba(16,177,132,0.8575805322128851) 100%);
     
@@ -87,6 +87,7 @@ h1 {
 
 
 .bottom {
+	height: 650px;
 	position: relative;
 	display: flex;
 	align-content: center;	
@@ -96,10 +97,10 @@ h1 {
 }
 
 .bubbles-container {
-
     position: absolute;
     top: 0;
     left: 50%;
+
     width: 100%;
     max-width: 15rem;
     transform: translateX(-50%);
@@ -108,6 +109,7 @@ h1 {
 }
 
 .bubbles {
+
 	z-index: 1;
 	width: 100%;
 	height: auto;	
