--- a/stylesheet_maincopy.css
+++ b/stylesheet_maincopy.css
@@ -15,6 +15,9 @@ body{
 	  width: auto;
 	  height: auto;
 }
+a{
+	text-decoration: none;
+}
 .top{
 	width: auto;
 	height: auto;
@@ -22,11 +25,22 @@ body{
 
 .center{
 	height: 1000px;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
 }
 
-h1 {
+h1,h2 {
 	font-family: 'Corben', cursive;
 	font-size: 4rem;
+	color: rgb(255, 255, 255);
+	letter-spacing: 0.1rem;
+	text-shadow: 0px 10px 10px rgba(25, 3, 54, 0.66);
+}
+h4{
+	font-family: 'Corben', cursive;
+	font-size: 2rem;
 	color: rgb(255, 255, 255);
 	letter-spacing: 0.1rem;
 	text-shadow: 0px 10px 10px rgba(25, 3, 54, 0.66);
@@ -54,8 +68,7 @@ h1 {
 }
 
 .hero__content {
-	position: relative;
-    align-self: center;
+
     padding: 3rem 0;
 	background-color: yellow;
 }
