--- a/stylesheet_maincopy.css
+++ b/stylesheet_maincopy.css
@@ -562,6 +562,7 @@ h4{
     display: block;
     position: relative;
 	left: -5px;
+	top: -2px;
     width: 20px;
     height: 20px;
     background: rgba(255, 255, 170, var(--light-opacity));
