--- a/stylesheet_main.css
+++ b/stylesheet_main.css
@@ -411,10 +411,10 @@ h4{
     transform: scale(0.7);
     transform-origin: 0 0;
     animation: float 4s infinite alternate ease-out;
-	margin-top: 400px;
+	margin-top: 370px;
 	margin-left: 74px;
 	overflow:auto;
-	width: auto;
+	width: 40%;
 	height: 100%;
 }
 @media only screen and (max-width: 1680px){
@@ -470,6 +470,12 @@ h4{
 	.bigfish{
 		margin-top: 300px;
 		margin-left: 20px;
+	}
+	.h1,h2 {
+		font-size: 1.5rem;
+	}
+	.h4 {
+		font-size: 1rem;
 	}
 }
 .bigfish .rest {
